--- a/src/App.css
+++ b/src/App.css
@@ -1,24 +1,42 @@
+
+
 .App {
-  text-align: center;
+	text-align: center;
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 80px;
-}
 
 .App-header {
-  background-color: #222;
-  height: 150px;
-  padding: 20px;
-  color: white;
+	background-color: #222;
+	height: 150px;
+	padding: 20px;
+	color: orange;
 }
 
 .App-intro {
-  font-size: large;
+	font-size: large;
 }
 
-@keyframes App-logo-spin {
-  from { transform: rotate(0deg); }
-  to { transform: rotate(360deg); }
+/* @keyframes App-logo-spin {
+	from { transform: rotate(0deg); }
+	to { transform: rotate(360deg); }
+} */
+.poster{
+  width: 105%;
+  height: 410px;
+  margin: 10px;
+  border-radius: 5px;
+  box-shadow: 3px 5px 5px #124559;
+  border: .5px solid #DFF2D8;
+ z-index: -1;
+
 }
+.poster:hover{
+  transform: scale(1.2);
+  transition: all 1s;
+  z-index: 2;
+  position: relative;
+}
+
+/* .single-movie{
+    margin-bottom: 100px;
+} */
