--- a/src/App.css
+++ b/src/App.css
@@ -27,7 +27,7 @@
   border-radius: 5px;
   box-shadow: 3px 5px 5px #124559;
   border: .5px solid #DFF2D8;
- z-index: -1;
+ /* z-index: -1; */
 
 }
 .poster:hover{
@@ -37,6 +37,25 @@
   position: relative;
 }
 
-/* .single-movie{
-    margin-bottom: 100px;
-} */
+.clicked-poster{
+    height: 400px;
+    margin-left: 50%;
+    height: 410px;
+    border-radius: 5px;
+    box-shadow: 3px 5px 5px #124559;
+    border: .5px solid #DFF2D8;
+
+}
+
+.clicked-poster-text{
+    font-size: 20px;
+    margin-left: 51%;
+    margin-top: 10px;
+    color: white;
+}
+
+.discover-button{
+  width: 100%;
+  height: 100%;
+  margin: auto;
+}
