--- a/src/App.css
+++ b/src/App.css
@@ -49,7 +49,7 @@
 
 .clicked-poster-text{
     font-size: 20px;
-    margin-left: 51%;
+    margin-left: 53%;
     margin-top: 10px;
     color: white;
 }
@@ -58,4 +58,32 @@
   width: 100%;
   height: 100%;
   margin: auto;
+}
+
+.nav-form{
+  margin-left: 10px;
+}
+
+.search-box{
+  border: 2px solid #7EBDC3;
+  width: 200px;
+  height: 30px;
+  margin-top: 10px;
+  background-color: white;
+  color: black;
+}
+
+.search-button{
+  background-color: #5C80BC;
+  border: 2px solid #7EBDC3;
+  width: 100px;
+  height: 30px;
+  margin-top: 2px;
+  margin-left: 10px;
+  border-radius: 10px;
+  color: white;
+}
+
+.nav-form{
+
 }
